--- a/src/app.scss
+++ b/src/app.scss
@@ -15,7 +15,7 @@ header {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        height: 100vh;
+        height: 93vh;
     }
 }
 
@@ -43,3 +43,6 @@ header {
     }
 }
 
+.homelogo {
+    margin: 0 auto;
+}
