--- a/src/app.scss
+++ b/src/app.scss
@@ -6,7 +6,7 @@ header {
     transition: all 0.3s;
 }
 
-.container-fluid {
+.container {
     margin-bottom: 40px;
     &:not(.home) {
         margin-top: 90px;
