--- a/src/app.scss
+++ b/src/app.scss
@@ -1,5 +1,5 @@
 header {
-    padding: 15px;
+    padding: 15px 0;
     height: 70px;
     background-color: white;
     box-shadow: 3px 3px 3px lightgrey;
